--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "yup": "^1.3.1"
   },
   "devDependencies": {
+    "@types/node": "^20.8.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
